--- a/Caddyfile
+++ b/Caddyfile
@@ -13,6 +13,7 @@
 
         handle_path /ui/* {
                 reverse_proxy http://localhost:3000
+				respond /passwordcheck/ "OK"
                 import /tmp/hashpass.txt
         }
 
