--- a/Dockerfile.stage2
+++ b/Dockerfile.stage2
@@ -1,64 +1,95 @@
 ##### Stage 2 ######
 ## commit container with Stata installation to new base image
 
-###################################################################
-# get easy-novnc to run novnc from a single binary
-FROM golang:1.14-buster AS easy-novnc-build
-
-# build easy-novnc
-WORKDIR /src
-RUN go mod init build && \
-    go get github.com/geek1011/easy-novnc@v1.1.0 && \
-    go build -o /bin/easy-novnc github.com/geek1011/easy-novnc
-
 ####################################################################
 # get the caddy executable
 FROM caddy AS caddy-build
 
 ####################################################################
 # get the stata executable
-FROM stage2 as stata-build
-RUN rm /usr/local/stata16/stata.lic
+FROM hypernetlabs/applications:stata16 as stata-build
+#RUN rm /usr/local/stata16/stata.lic
+####################################################################
+
+FROM ubuntu:18.04 as ide-build
+
+# install node, yarn, and other tools
+RUN apt update -y && apt install vim curl gcc g++ make libx11-dev libxkbfile-dev supervisor -y && \
+    curl -fsSL https://deb.nodesource.com/setup_12.x | bash - && \
+	apt install -y nodejs && \
+	npm install --global yarn
+
+# create a build directory for the IDE
+RUN mkdir /theia
+WORKDIR /theia
+
+# build the IDE
+COPY package.json .
+RUN yarn --pure-lockfile && \
+    NODE_OPTIONS="--max_old_space_size=4096" yarn theia build && \
+    yarn theia download:plugins && \
+    yarn --production && \
+    yarn autoclean --init && \
+    echo *.ts >> .yarnclean && \
+    echo *.ts.map >> .yarnclean && \
+    echo *.spec.* >> .yarnclean && \
+    yarn autoclean --force && \
+    yarn cache clean
 
 ####################################################################
 FROM ubuntu:18.04
 
 # install bare minimum required to run GUI applications 
 RUN apt-get update -y && apt-get upgrade -y && \
-    apt-get install -y --no-install-recommends openbox tigervnc-standalone-server supervisor gosu \
-    libgtk2.0.0 libpng16-16 vim xterm htop && \
-    rm -rf /var/lib/apt/lists && \
-    mkdir -p /usr/share/desktop-directories
+    apt-get install -y vim tmux curl zip unzip supervisor git software-properties-common -y && \
+	add-apt-repository -y ppa:deadsnakes/ppa && \
+	apt-get update -y && \
+	apt-get install -y python3.8 python3-pip python3-dev libsecret-1-dev && \
+    curl -fsSL https://deb.nodesource.com/setup_12.x | bash - && \
+	apt install -y nodejs && \
+	curl https://rclone.org/install.sh | bash 
 
 # add non-root user
 RUN useradd -ms /bin/bash galileo
-USER galileo
-WORKDIR /home/galileo
+COPY .theia /home/galileo/.theia
+RUN chmod -R a+rwx /home/galileo/.theia
 
 COPY --from=stata-build /usr/local/stata16 /usr/local/stata16
 
-USER root
-
 RUN chmod 777 /usr/local/stata16
+
+# switch to non-root user
+USER galileo
+WORKDIR /theia
+
+# get the IDE
+COPY --from=ide-build /theia /theia
 
 ENV PATH=/usr/local/stata16:$PATH
 COPY runstatabatch.sh /usr/local/stata16/runstatabatch.sh
 COPY runstatagui.sh /usr/local/stata16/runstatagui.sh
-    
-# copy configuration files and easy-novnc binary to this image
-COPY --from=easy-novnc-build /bin/easy-novnc /usr/local/bin/easy-novnc
-COPY menu.xml /etc/xdg/openbox/
-COPY supervisord.conf /etc/
-
-# switch to non-root user
-USER galileo
 
 # copy the caddy server build into this container
 COPY --from=caddy-build /usr/bin/caddy /usr/bin/caddy
 COPY Caddyfile /etc/
 
+# get superviserd
+COPY supervisord.conf /etc/
+
 # This environment variable determines which executable is called for stata (i.e. stata, stata-mp, etc.)
 ENV STATA xstata
+ENV GALILEO_RESULTS_DIR /home/galileo/
 
-#ENTRYPOINT ["bash","/usr/local/stata16/runstatabatch.sh"]
-#ENTRYPOINT ["sh", "-c", "supervisord"]
+# set environment variable to look for plugins in the correct directory
+ENV SHELL=/bin/bash \
+    THEIA_DEFAULT_PLUGINS=local-dir:/theia/plugins
+ENV USE_LOCAL_GIT true
+
+# # set login credintials and write them to text file
+# ENV USERNAME "a"
+# ENV PASSWORD "a"
+# RUN echo "basicauth /* {" >> /tmp/hashpass.txt && \
+    # echo "    {env.USERNAME}" $(caddy hash-password -plaintext $(echo $PASSWORD)) >> /tmp/hashpass.txt && \
+    # echo "}" >> /tmp/hashpass.txt
+
+ENTRYPOINT ["sh", "-c", "supervisord"]
