--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,3 +19,11 @@ autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+
+[program:rclone]
+priority=3
+command=rclone rcd --rc-no-auth --rc-allow-origin=http://localhost:8888
+autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
