--- a/Caddyfile
+++ b/Caddyfile
@@ -16,6 +16,11 @@
 				respond /passwordcheck/ "OK"
                 import /tmp/hashpass.txt
         }
+		
+		handle_path /rclone/* {
+                reverse_proxy http://localhost:5572
+                import /tmp/hashpass.txt
+        }
 
         handle_path /rpc/* {
                 reverse_proxy http://localhost:8080
