--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
           }
     },
     "dependencies": {
-		"@hypernetwork/galileo-ide-widget": "latest",
+        "@hypernetwork/galileo-ide-widget": "latest",
+        "@hypernetwork/galileo-ide-password-widget": "1.0.0",
+        "@hypernetwork/galileo-ide-storj-widget": "1.1.2",
         "@theia/editor-preview": "latest",
         "@theia/file-search": "latest",
         "@theia/markers": "latest",
@@ -28,7 +30,7 @@
         "@theia/search-in-workspace": "latest",
         "@theia/terminal": "latest",
         "@theia/vsx-registry": "latest",
-		"@theia/task": "latest",
+        "@theia/task": "latest",
         "@theia/plugin-dev": "latest",
         "@theia/plugin-ext": "latest"
     },
