--- a/Caddyfile
+++ b/Caddyfile
@@ -1,6 +1,7 @@
 :8888 {
         log
         root * /home/galileo
+        redir /auth/portal /ui/
 
         handle_path /* {
                 @uiget {
@@ -8,16 +9,45 @@
                         path /
                 }
                 redir @uiget /ui/
-                reverse_proxy localhost:4161
         }
 
-        handle_path /ui/* {
-                reverse_proxy http://localhost:3000
-				respond /passwordcheck/ "OK"
-                import /tmp/hashpass.txt
+        route /auth* {
+                authp {
+                crypto default token lifetime 3600
+                crypto key sign-verify 0e2fdcf8-6868-41a7-884b-7308795fc286
+                backends {
+                        local_backend {
+                                method local
+                                path /etc/gatekeeper/users.json
+                                realm local
+                        }
+                }
+                ui {
+                        logo url "https://storage.googleapis.com/mission_types/h_logo.png"
+                        custom html header path /etc/assets/header.html
+                }
+                cookie insecure on
+
+                }
+        }
+
+        route /ui* {
+                jwt {
+                        primary yes
+                        crypto key verify 0e2fdcf8-6868-41a7-884b-7308795fc286
+                        set auth url /auth
+                        allow roles authp/admin
+                        allow roles superadmin
+                }
+                        uri strip_prefix /ui
+                        reverse_proxy http://localhost:3000
         }
 
         handle_path /rpc/* {
                 reverse_proxy http://localhost:8080
+        }
+
+        handle_path /rclone/* {
+                reverse_proxy http://localhost:5572
         }
 }
