--- a/Caddyfile
+++ b/Caddyfile
@@ -14,6 +14,11 @@
 
         route /auth* {
                 authp {
+                        # only add this if you want to enforce mfa
+                        transform user {
+                                match origin local
+                                require mfa
+                        }
                 crypto default token lifetime 3600
                 crypto key sign-verify 0e2fdcf8-6868-41a7-884b-7308795fc286
                 backends {
@@ -24,6 +29,8 @@
                         }
                 }
                 ui {
+                        theme basic
+                        template settings "/etc/gatekeeper/assets/settings.template"
                         logo url "https://storage.googleapis.com/mission_types/h_logo.png"
                         custom html header path /etc/assets/header.html
                 }
@@ -53,7 +60,8 @@
                 reverse_proxy http://localhost:8080
         }
 
-        handle_path /rclone/* {
+        route /rclone* {
                 reverse_proxy http://localhost:5572
+                jwt
         }
 }
