--- a/Caddyfile
+++ b/Caddyfile
@@ -31,8 +31,10 @@
                 ui {
                         theme basic
                         template settings "/etc/gatekeeper/assets/settings.template"
-                        logo url "https://storage.googleapis.com/mission_types/h_logo.png"
-                        custom html header path /etc/assets/header.html
+                        template login "/etc/gatekeeper/assets/login.template"
+                        logo url "https://storage.googleapis.com/mission_types/h_logo_transparent.svg"
+                        custom html header path "/etc/assets/header.html"
+                        custom css path "/etc/assets/custom.css"
                 }
                 cookie insecure on
 
